# safe-chains

./: .gitignore  AGENTS.md  CLAUDE.md  COMMANDS.md  Cargo.toml  HARNESS-BEHAVIORS.md  README.md  RESEARCH-PLAN.md  SECURITY.md  TODO.md  archetypes.toml  build.rs  generate-docs.sh  install.sh  opencode-plugin.js  pathgates.toml  safe-chains.sh  test_safe_chains.py
.github/workflows/: fuzz-replay.yml  fuzz.yml  release.yml
commands/: SAMPLE.toml  binary.toml  builtins.toml  containers.toml  dotnet.toml  go.toml  hash.toml  magick.toml  net.toml  node.toml  ruby.toml  swift.toml  system.toml  text.toml  tools.toml  vcs.toml  wrappers.toml
commands/ai/: aider.toml  antigravity.toml  circuschief.toml  claude.toml  codex.toml  fm.toml  hf.toml  llm.toml  ollama.toml  opencode.toml  vibe.toml
commands/android/: aapt2.toml  apkanalyzer.toml  apksigner.toml  avdmanager.toml  bundletool.toml  emulator.toml  lint.toml  sdkmanager.toml  zipalign.toml
commands/ansible/: ansible-config.toml  ansible-doc.toml  ansible-galaxy.toml  ansible-inventory.toml  ansible-playbook.toml  ansible-vault.toml  molecule.toml
commands/api/: ab.toml  artillery.toml  bombardier.toml  bru.toml  inso.toml  iperf3.toml  k6.toml  locust.toml  newman.toml  siege.toml  vegeta.toml  wrk.toml
commands/archive/: 7z.toml  apple.toml  ar.toml  brotli.toml  bzip2-utils.toml  bzip2.toml  compress.toml  cpio.toml  ditto.toml  gzip-utils.toml  lz4.toml  lzip.toml  pax.toml  pbzip2.toml  pigz.toml  ptar.toml  shar.toml  tar.toml  unbrotli.toml  xz-utils.toml  xz.toml  zip-family.toml  zstd-utils.toml  zstd.toml
commands/binary/: hexdump.toml  mdls.toml  nm.toml  od.toml  otool.toml  sips.toml  size.toml  strings.toml  xv.toml
commands/blockchain/: anchor.toml  anvil.toml  bitcoin-cli.toml  cast.toml  chisel.toml  forge.toml  foundryup.toml  geth.toml  hardhat.toml  ignite.toml  lncli.toml  mythril.toml  near.toml  polkadot.toml  slither.toml  solana.toml  solc.toml  spl-token.toml  truffle.toml  vyper.toml
commands/builtins/: alias.toml  colon.toml  command.toml  declare.toml  exit.toml  (+14 more)
docs/: book.toml
examples/: generate_assets.rs
fuzz/: Cargo.toml  README.md
fuzz/corpus/parse/: seed-01-simple  seed-02-chain  seed-03-redirect-pipe  seed-04-find-exec  seed-05-fd-exec  seed-06-cmdsub  seed-07-credential  seed-08-traversal  seed-09-operators  seed-10-regex  seed-11-ar  seed-12-env-prefix
fuzz/fuzz_targets/: parse.rs
levels/: default.toml  default.toml.tmp
proptest-regressions/: handler_property_tests.txt  pathgate.txt
regions/: default.toml
scripts/: coverage.sh
src/: allowlist.rs  cli.rs  command.rs  composition.rs  compound.rs  docs.rs  handler_property_tests.rs  lib.rs  main.rs  parse.rs  pathctx.rs  pathgate.rs  policy.rs  registry.rs  settings.rs  setup.rs  suggest.rs  tests.rs  verdict.rs
tests/: cli_gate.rs  integration_hooks.rs  probe.rs
(+1580 files in other folders)
