[package]
name = "safe-chains"
version = "0.29.1"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
description = "Auto-allow safe, read-only bash commands in agentic coding tools"
repository = "https://github.com/michaeldhopkins/safe-chains"

[[bin]]
name = "safe-chains"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shell-words = "1"

[dev-dependencies]
clap_complete = "4"
clap_mangen = "0.2"
tempfile = "3"

[lints.clippy]
struct-excessive-bools = "deny"
fn-params-excessive-bools = "deny"
match_bool = "warn"
bool_to_int_with_if = "warn"
cognitive-complexity = "warn"
too-many-lines = "warn"
collapsible-if = "deny"
too-many-arguments = "deny"
needless-range-loop = "deny"
extend_with_drain = "deny"
